--- a/assets.htm
+++ b/assets.htm
@@ -16,9 +16,7 @@
     </div>
 
 
-        <h1 style="text-align:center">
-            Dimension Assets
-        </h1>
+    <h1 style="font-size:50px">Dimension<br />Assets<br /></h1>
         <h2 style="text-align:center">
             Assets
         </h2>
