--- a/contact.htm
+++ b/contact.htm
@@ -18,9 +18,7 @@
     </div>
 
     <blockquote>
-        <h1 style="text-align:center">
-            Dimension Assets
-        </h1>
+        <h1 style="font-size:50px">Dimension<br />Assets<br /></h1>
         <h2 style="text-align:center">
             Contact Us
         </h2>
