--- a/packages.htm
+++ b/packages.htm
@@ -16,9 +16,7 @@
         <a href="contact.htm">Contact Us</a>
     </div>
 
-    <h1 style="text-align:center">
-        Dimension Assets
-    </h1>
+    <h1 style="font-size:50px">Dimension<br />Assets<br /></h1>
     <h2 style="text-align:center">
         Packages
     </h2>
