--- a/contact.htm
+++ b/contact.htm
@@ -10,7 +10,7 @@
 </head>
 
 <body class="secondary">
-    
+
     <div style="text-align:center">
         <a href="index.htm">Home</a>
         <a href="assets.htm">Assets</a>
@@ -19,61 +19,65 @@
 
     <blockquote style="text-align:center">
         <h1 style="font-size:50px">Dimension<br />Assets<br /></h1>
-        <h2 style="font-size:25px">Contact Us<br /></h2>
-    </blockquote>
-    <hr/>
-    <h3 class="first" style="text-align:center">
-        If you have any questions regarding your order, assets, asset packages, <br/>
-        or you would like a price qoute for your project, please submit the form below.<br />
-        We will contact you as soon as possible.
-    </h3>
-    <hr/>
-    <form action= "" style="align-content:center">
+        <h2 style="font-size:25px">Next Generation Game Assets<br /></h2>
+        <hr />
         <h3 class="first" style="text-align:center">
-            <label> First Name:
-                <input type="text" name="firstName" size="20" />
-            </label>
-            <label>
-                Last Name:
-                <input type="text" name="lastName" size="20" />
-            </label>
-            <br/>
-            <br />
-            <label>
-                Email:
-                <input type="email" name="email" size="30" />
-            </label>
-            <label>
-                Phone:
-                <input type="text" name="lastName" size="10" max="10" />
-            </label>
-            <br />
-            <br />
-            <em> Preferred Contact Method: </em><br />
-            <label>Email:
-                <input class="radial" type="radio" name="method" />
-            </label>
-            <label>Phone:
-                <input class="radial" type="radio" name="method" />
-            </label>
-            <br />
-            <br />
-            <label>Subject:
-                <select name="subject">
-                    <option> Question </option>
-                    <option> Price Quote </option>
-                    <option> Problem </option>
-                    <option> Order Status Update </option>
-                </select>
-            </label>
-            <br/>
-            <br />
-            <textarea name="comments" rows="10"></textarea>
-            <br />
-            <br />
-            <input type="submit" value="Submit" class="button1" />
-            <input type="reset" value="Reset" class="button2" />
+            If you have any questions regarding your order, assets, asset packages, <br />
+            or you would like a price qoute for your project, please submit the form below.<br />
+            We will contact you as soon as possible.
         </h3>
-    </form>
+        <hr />
+    </blockquote>
+        <form action="" style="align-content:center">
+            <h3 class="first" style="text-align:center">
+                <label>
+                    First Name:
+                    <input type="text" name="firstName" size="20" />
+                </label>
+                <label>
+                    Last Name:
+                    <input type="text" name="lastName" size="20" />
+                </label>
+                <br />
+                <br />
+                <label>
+                    Email:
+                    <input type="email" name="email" size="30" />
+                </label>
+                <label>
+                    Phone:
+                    <input type="text" name="lastName" size="10" max="10" />
+                </label>
+                <br />
+                <br />
+                <em> Preferred Contact Method: </em><br />
+                <label>
+                    Email:
+                    <input class="radial" type="radio" name="method" />
+                </label>
+                <label>
+                    Phone:
+                    <input class="radial" type="radio" name="method" />
+                </label>
+                <br />
+                <br />
+                <label>
+                    Subject:
+                    <select name="subject">
+                        <option> Question </option>
+                        <option> Price Quote </option>
+                        <option> Problem </option>
+                        <option> Order Status Update </option>
+                    </select>
+                </label>
+                <br />
+                <br />
+                <textarea name="comments" rows="10"></textarea>
+                <br />
+                <br />
+                <input type="submit" value="Submit" class="button1" />
+                <input type="reset" value="Reset" class="button2" />
+            </h3>
+        </form>
 </body>
 </html>
