--- a/contact.htm
+++ b/contact.htm
@@ -19,7 +19,7 @@
 
     <blockquote style="text-align:center">
         <h1 style="font-size:50px">Dimension<br />Assets<br /></h1>
-        <h2 style="font-size:25px">Next Generation Game Assets<br /></h2>
+        <h2 style="font-size:25px">Contact Us<br /></h2>
         <hr />
         <h3 class="first" style="text-align:center">
             If you have any questions regarding your order, assets, asset packages, <br />
