--- a/packages.htm
+++ b/packages.htm
@@ -37,6 +37,11 @@
         function mouseLeaveMenu()
         {
             document.getElementById("mainMenu").innerHTML = "Menu &#8594;";
+
+                if (showing) {
+                    productMenu();
+                }
+
         }
 
        // Close the dropdown menu if the user clicks outside of it
@@ -59,9 +64,9 @@
 
 <body>
 
-    <div onmouseover="mouseOverMenu()" onmouseout="mouseLeaveMenu()" class="dropdown" style="float:left;">
+    <div onmouseover="mouseOverMenu()" onmouseleave="mouseLeaveMenu()" class="dropdown" style="float:left;">
         <a class="dropbtn1" id="mainMenu">Menu &#8594;</a>
-        <div class="dropdown-content" style="text-align:center; left:15px;">
+        <div class="dropdown-content" id="content" style="text-align:center; left:15px;">
             <a href="index.htm">Home</a>
             <a href="contactus.htm">Contact Us</a>
             <div class="dropdown2">
