--- a/contactus.htm
+++ b/contactus.htm
@@ -6,60 +6,7 @@
     <link rel="stylesheet" type="text/css" href="Style2.css">
     <title>Dimension Assets</title>
     <meta name="description" content="HTML5 Template">
-    <script>
-/* When the user clicks on the button,
-        toggle between hiding and showing the dropdown content */
-        var showing = false;
-
-        function productMenu() {
-            document.getElementById("myDropdown").classList.toggle("show");
-            if (!showing) {
-                document.getElementById("productsLink").innerHTML = "Products &#8628;";
-                showing = true;
-            } else {
-                document.getElementById("productsLink").innerHTML = "Products &#8594;";
-                showing = false;
-            }
-        }
-
-        function mouseLeaveProducts() {
-            if (showing)
-            {
-                productMenu();
-            }
-        }
-
-        function mouseOverMenu()
-        {
-            document.getElementById("mainMenu").innerHTML = "Menu &#8628;";
-        }
-
-        function mouseLeaveMenu()
-        {
-            document.getElementById("mainMenu").innerHTML = "Menu &#8594;";
-
-                if (showing) {
-                    productMenu();
-                }
-
-        }
-
-       // Close the dropdown menu if the user clicks outside of it
-       window.onclick = function (event) {
-           if (!event.target.matches('.dropbtn2')) {
-               document.getElementById("productsLink").innerHTML = "Products &#x2192;";
-               showing = false;
-               var dropdowns = document.getElementsByClassName("dropdown-content2");
-               var i;
-               for (i = 0; i < dropdowns.length; i++) {
-                   var openDropdown = dropdowns[i];
-                   if (openDropdown.classList.contains('show')) {
-                       openDropdown.classList.remove('show');
-                   }
-               }
-           }
-       }
-    </script>
+    
 </head>
 
 <body>
@@ -78,7 +25,7 @@
             </div>
         </div>
     </div>
-
+    <script src="FirstScript.js"></script>
     <div class="textAlignCenter" style="align-content:center;">
         <header class="backgroundTransparent">
             <h1 class="color1 fontSpaceman" style="font-size:55px">Dimension<br />Assets<br /></h1>
