--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,12 @@
     <link rel="stylesheet" type="text/css" href="Style2.css">
     <title>Dimension Assets</title>
     <meta name="description" content="HTML5 Template">
+    <style>
+        .botMargin
+        {
+            margin-bottom: 2cm;
+        }
+    </style>
 </head>
 
 <body>
@@ -35,7 +41,7 @@
 
         <hr />
         <br />
-        <h3 class="first fontMain color1" style="font-size:30px">
+        <h3 class="first fontMain color1 botMargin" style="font-size:30px">
             Are you an independent game developer looking to take your graphics to the next level? <br />
             Dimension Assets can provide your game with the original assets it needs, at an affordable price. <br />
             Cel-shaded? Retro? Stylized? Realistic? Whichever style you're looking for, Dimension Assets can handle it. <br />
