--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@
     <style>
         .botMargin
         {
-            margin-bottom: 4cm;
+            margin-bottom: 25%;
         }
     </style>
 </head>
