--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@
     <style>
         .botAlign
         {          
-            bottom:0;
+            margin-top: 4cm;
         }
     </style>
 </head>
