--- a/index.htm
+++ b/index.htm
@@ -10,6 +10,7 @@
         .botAlign
         {          
             margin-top: 4cm;
+            margin-bottom: 1cm;
         }
     </style>
 </head>
@@ -47,8 +48,8 @@
             Cel-shaded? Retro? Stylized? Realistic? Whichever style you're looking for, Dimension Assets can handle it. <br />
         </h3>
     </div>
-    <div class="textAlignCenter botAlign" style="align-content:center;">
-        <h3 class="first fontMain color1" style="font-size:30px">
+    <div class="textAlignCenter" style="align-content:center;">
+        <h3 class="first fontMain color1 botAlign" style="font-size:30px">
             <em>Our assets are compatible with all major game engines.</em>
         </h3>
         <h3>
