--- a/index.htm
+++ b/index.htm
@@ -20,7 +20,7 @@
     <div onmouseover="mouseOverMenu()" onmouseleave="mouseLeaveMenu()" class="dropdown" style="float:left;">
         <a class="dropbtn1" id="mainMenu">Menu &#8594;</a>
         <div class="dropdown-content" id="content" style="text-align:center; left:15px;">
-            <a href="index.htm">Home</a>
+            <a href="index.htm">Home&#9679;</a>
             <a href="contactus.htm">Contact Us</a>
             <div class="dropdown2">
                 <a onclick="productMenu()" id="productsLink" class="dropbtn2">Products &#8594;</a>
