--- a/contactus.htm
+++ b/contactus.htm
@@ -33,7 +33,7 @@
 
         <h2 class="color2 fontSpaceman" style="font-size:45px">Contact Us<br /></h2>
 
-        <img src="images/Hr.png" width="1920" height="4" />
+        <img class="marginIncrease" src="images/Hr.png" width="100%" height="1%" />
         <br />
         <h3 class="first fontMain color1" style="text-align:center; font-size:30px;">
             If you have any questions regarding your order, assets, asset packages, <br />
