--- a/packages.htm
+++ b/packages.htm
@@ -32,7 +32,7 @@
         </header>
 
         <h2 class="color2 fontSpaceman" style="font-size:45px">Packages<br /></h2>
-        <img src="images/Hr.png" width="1920" height="4" />
+        <img class="marginIncrease" src="images/Hr.png" width="100%" height="1%" />
 
         <table rules="all" class="fontMain color1" style="font-size:30px">
 
