--- a/index.htm
+++ b/index.htm
@@ -14,6 +14,7 @@
         }
         .spreadImgs
         {
+            color:#D8D8F6;
             margin-left: 15px;
              margin-right: 15px;
         }
