--- a/index.htm
+++ b/index.htm
@@ -43,7 +43,7 @@
             <h1 class="color1 fontSpaceman" style="font-size:55px">dimension<br />assets<br /></h1>
         </header>
 
-        <h2 class="color2 fontSpaceman" style="font-size:45px">Next Generation Game Assets<br /></h2>
+        <h2 class="color2 fontSpaceman" style="font-size:45px">next generation game assets<br /></h2>
 
         <img class="marginIncrease" src="images/Hr.png" width="100%" height="1%" />
         <br />
