--- a/index.htm
+++ b/index.htm
@@ -56,31 +56,31 @@
 
     <div class="slideshow-container">
         <div class="mySlides fade">
-            <div class="fontMain color2"><h3 style="font-size:20px">1 / 5</h3></div>
+            <div class="numbertext fontMain color1"><h3 style="font-size:20px">1 / 5</h3></div>
             <img src="images/character.jpg" style="width:100%">
             <div class="text"><h3 class="first fontMain color2 botAlign" style="font-size:30px">Character Models</h3></div>
         </div>
 
         <div class="mySlides fade">
-            <div class="fontMain color2"><h3 style="font-size:20px">2 / 5</h3></div>
+            <div class="numbertext fontMain color1"><h3 style="font-size:20px">2 / 5</h3></div>
             <img src="images/texture.jpg" style="width:100%">
             <div class="text"><h3 class="first fontMain color2 botAlign" style="font-size:30px">HD Textures</h3></div>
         </div>
 
         <div class="mySlides fade">
-            <div class="fontMain color2"><h3 style="font-size:20px">3 / 5</h3></div>
+            <div class="numbertext fontMain color1"><h3 style="font-size:20px">3 / 5</h3></div>
             <img src="images/landscape.jpg" style="width:100%">
             <div class="text"><h3 class="first fontMain color2 botAlign" style="font-size:30px">Landscapes</h3></div>
         </div>
 
         <div class="mySlides fade">
-            <div class="fontMain color2"><h3 style="font-size:20px">4 / 5</h3></div>
+            <div class="numbertext fontMain color1"><h3 style="font-size:20px">4 / 5</h3></div>
             <img src="images/item.jpg" style="width:100%">
             <div class="text"><h3 class="first fontMain color2 botAlign" style="font-size:30px">Objects</h3></div>
         </div>
 
         <div class="mySlides fade">
-            <div class="fontMain color2"><h3 style="font-size:20px">5 / 5</h3></div>
+            <div class="numbertext fontMain color1"><h3 style="font-size:20px">5 / 5</h3></div>
             <img src="images/structure.jpg" style="width:100%">
             <div class="text"><h3 class="first fontMain color2 botAlign" style="font-size:30px">Environments</h3></div>
         </div>
