--- a/index.htm
+++ b/index.htm
@@ -72,7 +72,7 @@
         <div class="mySlides fade">
             <div class="numbertext fontMain color1"><h3 style="font-size:25px">5 / 5</h3></div>
             <img src="images/structure.jpg" style="width:100%">
-            <div class="text"><h3 class="first fontMain color2 botAlign" style="font-size:40px">Environments</h3></div>
+            <div class="text"><h3 class="first fontMain color2 botAlign" style="font-size:40px">Structures</h3></div>
         </div>
 
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
