--- a/spacerace.htm
+++ b/spacerace.htm
@@ -13,7 +13,7 @@
     <div class="title">
         The Great Space Race
     </div>
-    <a onclick="Reset()" id ="message" class="message">Press the red light to begin!</a>
+    <a onclick="Reset()" id ="message" class="message">Click the red light to begin!</a>
    
     <div class="goLight"><a id="startButton" onclick="GameStarted()" class="lightButton"></a></div>
     
